--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "concurrently \"npm run client\" \"npm run server\"",
+    "client": "vue-cli-service serve",
+    "server": "cd ../server/ && npm run test",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "autoprefixer": "^10",
+    "axios": "^0.27.2",
+    "concurrently": "^7.2.0",
     "core-js": "^3.8.3",
+    "fs": "^0.0.1-security",
+    "http-proxy-middleware": "^2.0.6",
     "leaflet": "^1.8.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "os-browserify": "^0.3.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
@@ -24,8 +32,6 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "eslint-plugin-vue": "^8.0.3"
   }
 }
