--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue3-mq": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
